--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
